--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "chrome",
             "request": "attach",
             "name": "localhost에 대해 Chrome 시작",
-            "url": "http://localhost:8080",
+            "url": "http://localhost:3000",
+            "port": 3000,
             "webRoot": "${workspaceFolder}"
         }
     ]
