--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "antd": "^3.8.2",
+    "next": "^7.0.2",
+    "node-sass": "^4.9.4",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts-ts": "2.17.0"
@@ -19,6 +21,7 @@
     "@types/node": "^10.5.7",
     "@types/react": "^16.4.8",
     "@types/react-dom": "^16.0.7",
+    "@types/next/link": "7.0.2",
     "ts-import-plugin": "^1.5.4",
     "typescript": "^3.0.3"
   }
